index.css
/* ... */
    /* line 187, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_main-area.sass */
    .problem-solve-table td.image img.group {
      margin-top: -10%; }
/* line 190, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_main-area.sass */
.problem-solve-table td.text ul {
  margin-top: 0.5rem;
  margin-bottom: 0; }
/* line 193, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_main-area.sass */
.problem-solve-table td.text .details {
  width: 100%;
  text-align: right; }

/* line 198, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_main-area.sass */
.problem-solve-detail-link {
  display: block;
  width: 100%;
  text-align: right; }

/* line 203, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_main-area.sass */
.call-back-btn {
  margin-top: 2rem; }

/* line 206, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_main-area.sass */
.panel.service-small-block {
  width: 20%;
  float: left; }
  @media  (max-width: 600px) {
    .panel.service-small-block {
      width: 75%; } }
  /* line 211, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_main-area.sass */
  .panel.service-small-block:hover {
    box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12); }

/* line 1, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_style.sass */
html, body {
  position: relative;
  height: 100%;
  width: 100%;
  margin: 0px;
  padding: 0px;
  background-color: white;
  font-size: 1.25rem;
  line-height: 1.59;
  background: url('./images/bg_grey.png') repeat top; }

/* line 13, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_style.sass */
html {
  font-size: 100%;
  font-family: 'PTSansRegular', sans-serif; }
  @media  (max-width: 1200px) {
    html {
      font-size: 15px; } }
  @media  (max-width: 960px) {
    html {
      font-size: 13px; } }

/* line 21, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_style.sass */
strong {
  font-family: 'PTSansBold', sans-serif; }

/* line 24, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_style.sass */
a {
  color: #3f51b5;
  text-decoration: none; }
  /* line 27, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_style.sass */
  a:hover {
    text-decoration: underline; }
  /* line 30, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_style.sass */
  a.btn:hover {
    text-decoration: none; }

/* line 33, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_style.sass */
.margin-top-1rem {
  margin-top: 1rem; }

/* line 2, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_article.sass */
#article-dscommon .hblock {
  box-sizing: border-box;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto; }
  /* line 12, /Users/Trikster/static_sites/DelightSoftSite/src/sass/lib/susy/output/support/_clearfix.scss */
  #article-dscommon .hblock:after {
    content: " ";
    display: block;
    clear: both; }
  /* line 5, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_article.sass */
  #article-dscommon .hblock ul {
    box-sizing: border-box;
    width: 50%;
    float: left; }
  /* line 7, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_article.sass */
  #article-dscommon .hblock .zooming-img {
    box-sizing: border-box;
    width: 50%;
    float: right;
    margin-right: 0;
    float: left; }
    /* line 10, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_article.sass */
    #article-dscommon .hblock .zooming-img img:first-child {
      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.23), 0 10px 40px rgba(0, 0, 0, 0.19); }
    /* line 12, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_article.sass */
    #article-dscommon .hblock .zooming-img .magnifier-icon {
      top: 80px;
      left: 80px;
      margin: inherit; }

/* line 18, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_article.sass */
#article-contacts td {
  padding-top: 6px;
  padding-right: 6px;
  padding-bottom: 6px; }

/* line 24, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_article.sass */
#article-autopark .img-float-right {
  float: right;
  padding: 0.5rem; }

/* line 31, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_article.sass */
#article-company .project-short-details tr td {
  vertical-align: top;
  padding-bottom: 1rem; }
  /* line 34, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_article.sass */
  #article-company .project-short-details tr td:first-child {
    padding-right: 1rem; }

/* line 41, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_article.sass */
.hide-video #article-projects .project-teaser td:first-child {
  width: 30%; }

/* line 46, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_article.sass */
#article-projects .project-teaser td {
  vertical-align: top; }
  /* line 48, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_article.sass */
  #article-projects .project-teaser td:first-child {
    width: 40%;
    padding-right: 1rem; }
  /* line 51, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_article.sass */
  #article-projects .project-teaser td h1 {
    margin-top: 0;
    padding-bottom: 0.5rem;
    font-size: 1.5rem;
    line-height: 1.2; }

/* line 58, /Users/Trikster/static_sites/DelightSoftSite/src/sass/partials/_article.sass */
#article-business-process .right-side-img {
  float: right;
  width: 180px; }
  @media  (max-width: 600px) {
    #article-business-process .right-side-img {
      width: 80px; } }
  @media  (max-width: 768px) {
    #article-business-process .right-side-img {
      width: 120px; } }
  @media  (min-width: 1200px) {
    #article-business-process .right-side-img {
      width: 140px; } }
/* ... */

